--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
       steps {
         echo 'Git fatch'
         git url: 'https://github.com/s4616/spring-petclinic.git/',
-          branch: main, credentialId: 'gitCredential'
+          branch: 'main', credentialId: 'gitCredential'
       }
     }
     stage('Maven Build') {
