--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,8 +1,12 @@
 pipeline {
   agent any
+  tools {
+    maven "M3"
+    jdk "JDK11"
+  }
   
   stages {
-    stage('Git fatch') {
+    stage('Git fetch') {
       steps {
         echo 'Git fatch'
         git url: 'https://github.com/s4616/spring-petclinic.git/',
@@ -12,6 +16,7 @@ pipeline {
     stage('Maven Build') {
       steps {
         echo 'Maven Build'
+        sh 'mvn -Dmaven.test.failure.ignore=true clean package'
       }
     }
     stage('Docker Image') {
