--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
       steps {
         echo 'Docker Image'
         dir("${env.WORKSPACE}") {
-          sh 'docker build -t aws00-spring-petclinic:1.0'
+          sh 'docker build -t aws00-spring-petclinic:1.0 .'
         }
       }
     }
