--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
     AWS_CREDENTIAL_NAME = "awsEcrCredential"
     AWS_ACCOUNT_ID = "257307634175"
     REGION = "ap-northeast-2"
-    DOCKER_IMAGE_NAME="aws00-spring-petclinic"
+    DOCKER_IMAGE_NAME="project-spring-petclinic"
     DOCKER_TAG="1.0"
     ECR_REPOSITORY = "${AWS_ACCOUNT_ID}.dkr.ecr.ap-northeast-2.amazonaws.com"
     ECR_DOCKER_IMAGE = "${ECR_REPOSITORY}/${DOCKER_IMAGE_NAME}"
