--- a/deploy/appspec.yml
+++ b/deploy/appspec.yml
@@ -3,7 +3,7 @@ version: 0.0
 os: linux
 
 files:
-  - source: /
+  - source: /deploy/
     destination: /home/ubuntu
 permission:
   - object: /home/ubuntu
