--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,5 +1,5 @@
 pipeline {
-  agent any
+    agent any
     tools {
         maven 'M3'
         jdk 'JDK11'
@@ -15,107 +15,124 @@ pipeline {
         string(name : 'AWS_ACCOUNT_ID', defaultValue : '257307634175', description : 'AWS_ACCOUNT_ID')
         string(name : 'DOCKER_IMAGE_NAME', defaultValue : 'spring-petclinic', description : 'DOCKER_IMAGE_NAME')
         string(name : 'DOCKER_TAG', defaultValue : '1.0', description : 'DOCKER_TAG')
-
+==
         // CD
         string(name : 'TARGET_SVR_USER', defaultValue : 'ubuntu', description : 'TARGET_SVR_USER')
         string(name : 'TARGET_SVR_PATH', defaultValue : '/home/ubuntu/', description : 'TARGET_SVR_PATH')
+        // 타겟 컴퓨터 IP
         string(name : 'TARGET_SVR', defaultValue : '10.0.3.61', description : 'TARGET_SVR')
     }
 
     environment {
-      AWS_CREDENTIAL_NAME = "AWSCredentials"
-      REGION = "ap-northeast-2"
-      ECR_REPOSITORY = "${params.AWS_ACCOUNT_ID}.dkr.ecr.ap-northeast-2.amazonaws.com"
-      ECR_DOCKER_IMAGE = "${ECR_REPOSITORY}/${params.DOCKER_IMAGE_NAME}"
-      ECR_DOCKER_TAG = "${params.DOCKER_TAG}"
-    
-      CODEBUILD_NAME = "jenkins-slave-codebuild"
-      CODEBUILD_ARTIFACT_S3_NAME = "jenkins-slave-artifact-codebuild-s3"
-      CODEBUILD_ARTIFACT_S3_KEY = "${currentBuild.number}/jenkins-slave-codebuild"
-      CODEDEPLOY_NAME = "project00-codedeploy-app"
-      CODEDEPLOY_GROUP_NAME = "project00-codedeploy-group"
+        AWS_CREDENTIAL_NAME = "AWSCredentials"
+        REGION = "ap-northeast-2"
+        DOCKER_IMAGE_NAME="std00-spring-petclinic"
+        DOCKER_TAG="1.0"
+        ECR_REPOSITORY = "${params.AWS_ACCOUNT_ID}.dkr.ecr.ap-northeast-2.amazonaws.com"
+        ECR_DOCKER_IMAGE = "${ECR_REPOSITORY}/${DOCKER_IMAGE_NAME}"
+        ECR_DOCKER_TAG = "${DOCKER_TAG}"
+
+        CODEBUILD_NAME = "jenkins-slave-codebuild"
+        CODEBUILD_ARTIFACT_S3_NAME = "jenkins-slave-artifact-codebuild-s3"
+        CODEBUILD_ARTIFACT_S3_KEY = "${currentBuild.number}/jenkins-slave-codebuild"
+        CODEDEPLOY_NAME = "spring-petclinic-codedeploy-app"
+        CODEDEPLOY_GROUP_NAME = "dev-codedeploy-group"
     }
 
-  stages {
-    stage('============ Build Docker Image ============') {
-      steps {
-        awsCodeBuild(
-          credentialsType: 'keys',
-          region: "${REGION}",
-          projectName: "${CODEBUILD_NAME}",
-          sourceControlType: 'jenkins',
-          sseAlgorithm: 'AES256',
-          buildSpecFile: "deploy/buildspec.yml",
-          artifactTypeOverride: "S3",
-          artifactNamespaceOverride: "NONE",
-          artifactPackagingOverride: "ZIP",
-          artifactPathOverride: "${currentBuild.number}",
-          artifactLocationOverride: "${CODEBUILD_ARTIFACT_S3_NAME}"
-        )
-      }
-    }
-    stage('Prompt for deploy') {
-      steps {
-        script {
-          env.APPROAL_NUM = input message: 'Please enter the approval number',
-            parameters: [string(defaultValue: '', description: '', name: 'APPROVAL_NUM')]
-        }
-        echo "${env.APPROAL_NUM}"
-      }
-    }
-    stage('============ Deploy workload ============') {
-      steps {
-        echo "Run CodeDeploy with creating deployment"
-        script {
-          sh'''
-            aws deploy create-deployment \
-            --application-name ${CODEDEPLOY_NAME} \
-            --deployment-group-name ${CODEDEPLOY_GROUP_NAME} \
-            --region ${REGION} \
-            --s3-location bucket=${CODEBUILD_ARTIFACT_S3_NAME},bundleType=zip,key=${CODEBUILD_ARTIFACT_S3_KEY} \
-            --file-exists-behavior OVERWRITE \
-            --output json > DEPLOYMENT_ID.json
-            '''
-            def DEPLOYMENT_ID = sh(script: "cat DEPLOYMENT_ID.json | grep -o '\"deploymentId\": \"[^\"]*' | cut -d'\"' -f4", returnStdout: true).trim()
-            echo "$DEPLOYMENT_ID"
-            sh "rm -rf ./DEPLOYMENT_ID.json"
-            def DEPLOYMENT_RESULT = ""
-            while("$DEPLOYMENT_RESULT" != "\"Succeeded\"") {
-              DEPLOYMENT_RESULT = sh(
-                script:"aws deploy get-deployment \
-                --region ${REGION} \
-                --query \"deploymentInfo.status\" \
-                --deployment-id ${DEPLOYMENT_ID}",
-                returnStdout: true
-                ).trim()
-              echo "$DEPLOYMENT_RESULT"
-              if ("$DEPLOYMENT_RESULT" == "\"Failed\"") {
-                currentBuild.result = 'FAILURE'
-                break
-              }
-              sleep(10) // sleep 10s
+    stages {
+        stage('Git clone') {
+            steps {
+                git url: 'https://github.com/s4616/spring-petclinic.git', branch: 'main', credentialsId: 's4616'
             }
-            currentBuild.result = 'SUCCESS'
-          }
+            post {
+                success {
+                    echo 'success clone project'
+                }
+                failure {
+                    error 'fail clone project' // exit pipeline
+                }
+            }
         }
-      }
-    }
-  }
+        
+        stage ('mvn Build') {
+            steps {
+                sh 'mvn -Dmaven.test.failure.ignore=true install' 
+            }
+            post {
+                success {
+                    junit 'target/surefire-reports/**/*.xml' 
+                }
+            }
+        }
+        
+        stage ('Docker Build') {
+            steps {
+                dir("${env.WORKSPACE}") {
+                    sh 'docker build -t ${ECR_DOCKER_IMAGE}:${ECR_DOCKER_TAG} .'
+                }
+            }
+            
+            post {
+                success {
+                    echo "Docker build success!"
+                }
+            }
+        }       
 
-  post {
-    success {
-      slackSend(
-        channel: "#jenkins",
-        color: "good",
-        message: "[Successful] Job:${env.JOB_NAME}, Build num:#${env.BUILD_NUMBER} (<${env.RUN_DISPLAY_URL}|open job detail>)"
-      )
+        stage('Push Docker Image') {
+            steps {
+                echo "Push Docker Image to ECR"
+                script{
+                    // cleanup current user docker credentials
+                    sh 'rm -f ~/.dockercfg ~/.docker/config.json || true'                    
+                   
+                    docker.withRegistry("https://${ECR_REPOSITORY}", "ecr:${REGION}:${AWS_CREDENTIAL_NAME}") {
+                      docker.image("${ECR_DOCKER_IMAGE}:${ECR_DOCKER_TAG}").push()
+                    }
+                }
+            }
+            post {
+                success {
+                    echo "Push Docker Image success!"
+                }
+            }
+        }
+        stage('============ Deploy workload ============') {
+        when { expression { return params.DEPLOY_WORKLOAD } }
+        agent { label 'master' }
+        steps {
+            echo "Run CodeDeploy with creating deployment"
+            script {
+                sh'''
+                    aws deploy create-deployment \
+                        --application-name ${CODEDEPLOY_NAME} \
+                        --deployment-group-name ${CODEDEPLOY_GROUP_NAME} \
+                        --region ${REGION} \
+                        --s3-location bucket=${CODEBUILD_ARTIFACT_S3_NAME},bundleType=zip,key=${CODEBUILD_ARTIFACT_S3_KEY} \
+                        --file-exists-behavior OVERWRITE \
+                        --output json > DEPLOYMENT_ID.json
+                '''
+                def DEPLOYMENT_ID = sh(script: "cat DEPLOYMENT_ID.json | grep -o '\"deploymentId\": \"[^\"]*' | cut -d'\"' -f4", returnStdout: true).trim()
+                echo "$DEPLOYMENT_ID"
+                sh "rm -rf ./DEPLOYMENT_ID.json"
+                def DEPLOYMENT_RESULT = ""
+                while("$DEPLOYMENT_RESULT" != "\"Succeeded\"") {
+                    DEPLOYMENT_RESULT = sh(
+                        script:"aws deploy get-deployment \
+                                    --region ${REGION} \
+                                    --query \"deploymentInfo.status\" \
+                                    --deployment-id ${DEPLOYMENT_ID}",
+                        returnStdout: true
+                    ).trim()
+                    echo "$DEPLOYMENT_RESULT"
+                    if ("$DEPLOYMENT_RESULT" == "\"Failed\"") {
+                        currentBuild.result = 'FAILURE'
+                        break
+                    }
+                    sleep(10) // sleep 10s
+                }
+                currentBuild.result = 'SUCCESS'
+            }
+        }
     }
-    failure {
-      slackSend(
-        channel: "#jenkins",
-        color: "danger",
-        message: "[Failed] Job:${env.JOB_NAME}, Build num:#${env.BUILD_NUMBER} @channel (<${env.RUN_DISPLAY_URL}|open job detail>)"
-      )
-    }
-  }
 }
