--- a/appspec.yml
+++ b/appspec.yml
@@ -12,10 +12,10 @@ permission:
     group: ubuntu
 hooks:
   ApplicationStop:
-    - location: scripts/kill_process.sh
+    - location: /home/ubuntu/scripts/kill_process.sh
       timeout: 100
       runas: ubuntu
   ApplicationStart:
-    - location: scripts/run_process.sh
+    - location: /home/ubuntu/scripts/run_process.sh
       timeout: 3600
       runas: ubuntu
