--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ version: 0.0
 os: linux
 
 files:
-  - source: /deploy/
+  - source: deploy/
     destination: /home/ubuntu
 permission:
   - object: /home/ubuntu
@@ -12,10 +12,10 @@ permission:
     group: ubuntu
 hooks:
   ApplicationStop:
-    - location: /home/ubuntu/scripts/kill_process.sh
+    - location: deploy/scripts/kill_process.sh
       timeout: 100
       runas: ubuntu
   ApplicationStart:
-    - location: /home/ubuntu/scripts/run_process.sh
+    - location: deploy/scripts/run_process.sh
       timeout: 3600
       runas: ubuntu
