--- a/appspec.yml
+++ b/appspec.yml
@@ -14,8 +14,8 @@ hooks:
   ApplicationStop:
     - location: deploy/scripts/kill_process.sh
       timeout: 100
-      runas: ubuntu
+      runas: root
   ApplicationStart:
     - location: deploy/scripts/run_process.sh
       timeout: 3600
-      runas: ubuntu
+      runas: root
