--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -77,7 +77,7 @@ pipeline {
             steps {
                 echo "Upload to S3"
                 zip -r deploy-1.0.zip ./scripts appspec.yml
-                aws s3 cp --region ap-northeast-2 --acl private ./deploy-1.0.zip s3://project00-codeproject
+                aws s3 cp --region ap-northeast-2 --acl private ./deploy-1.0.zip s3://project00-codedeploy
             }
         }
         stage('Codedeploy Workload') {
