--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -76,8 +76,9 @@ pipeline {
         stage('Upload to S3') {
             steps {
                 echo "Upload to S3"
-                sh 'zip -r deploy-1.0.zip ./deploy/scripts appspec.yml'
+                sh 'zip -r deploy-1.0.zip ./deploy appspec.yml'
                 sh 'aws s3 cp --region ap-northeast-2 --acl private ./deploy-1.0.zip s3://project00-codedeploy'
+                sh 'rm -rf ./deploy-1.0.zip'
             }
         }
                 
