--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -6,14 +6,14 @@ pipeline {
     }   
 
     environment {
-        AWS_CREDENTIAL_NAME = "AWSCredentials"
+        AWS_CREDENTIAL_NAME = "awsEcrCredential"
+        AWS_ACCOUNT_ID = "257307634175"
         REGION = "ap-northeast-2"
         DOCKER_IMAGE_NAME="project00-spring-petclinic"
         DOCKER_TAG="1.0"
-        ECR_REPOSITORY = "${params.AWS_ACCOUNT_ID}.dkr.ecr.ap-northeast-2.amazonaws.com"
+        ECR_REPOSITORY = "${AWS_ACCOUNT_ID}.dkr.ecr.ap-northeast-2.amazonaws.com"
         ECR_DOCKER_IMAGE = "${ECR_REPOSITORY}/${DOCKER_IMAGE_NAME}"
         ECR_DOCKER_TAG = "${DOCKER_TAG}"
-    }
 
     stages {
         stage('Git clone') {
